excluded ui tests from being run as coverage by pitest and improved test classes in presenter layer